# hey-claude

./: .gitignore  CLAUDE.md  README.md  com.hey-claude.chotu.plist.template  com.hey-claude.plist.template  config.toml  launch-chotu.sh.template  launch-hey-claude.sh.template  pyproject.toml
chotu/: __init__.py  __main__.py  actions.py  ax.py  bootstrap.py  commands.py  config.py  keys.py  log.py  ports.py  state.py  system.py  telemetry.py  wake.py
docs/: ARCHITECTURE.md  BACKLOG.md  BUILD-PLAN.md  DIALOG-STATE-PLAN.md  DICTATION-AX-PLAN.md  HARDENING-PLAN.md  PRESS-BY-NAME-PLAN.md  REQUIREMENTS.md
hey_claude/: __init__.py  __main__.py  actions.py  appstate.py  ax.py  commands.py  config.py  dialog.py  keys.py  log.py  menubar.py  ports.py  reconcile.py  state.py  system.py  telemetry.py  wake.py
scripts/: ax_notify_probe.py  ax_probe.py  ax_toggle_probe.py  chotu-restart.sh  hey-claude-restart.sh  setup.sh  stats.py  train-wake-word.md  train_chotu.md  wake_listen.py
tests/: fakes.py  test_actions.py  test_appstate.py  test_commands.py  test_dialog.py  test_fixups.py  test_reconcile.py  test_state.py  test_stats.py  test_telemetry.py
tests/integration/: test_ax_live.py
