[project]
name = "hey-claude"
version = "0.1.0"
description = "Wake-word voice controller for driving Claude Code hands-free on macOS"
requires-python = ">=3.11"
dependencies = [
    "openwakeword>=0.6.0",
    # onnxruntime >= ~1.20 silently breaks openWakeWord 0.6.0 (classifier outputs
    # 0.0 on all audio, even known-positive clips). Pin to a compatible range.
    # Verified 2026-07-06: 1.18.1 scores known positives at 1.000; 1.27.0 → 0.000.
    "onnxruntime>=1.16,<1.19",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.scripts]
hey-claude = "hey_claude.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a live focused VS Code (skipped by default)",
    "manual: run by a human at the keyboard",
]
addopts = "-m 'not integration and not manual'"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
